infrastructure/03-apps/sure/manifests/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: sure-web-policy
  namespace: sure
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sure
      app.kubernetes.io/instance: sure
      app.kubernetes.io/component: web
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": alloy
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": sure
            "k8s:app": sure-postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": sure
            "k8s:app.kubernetes.io/name": sure
            "k8s:app.kubernetes.io/instance": sure
            "k8s:app.kubernetes.io/component": redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": auth
            app: keycloak
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": ai
            "k8s:app": ollama
      toPorts:
        - ports:
            - port: "11434"
              protocol: TCP
    - toEntities:
        - world
        - cluster
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: sure-worker-policy
  namespace: sure
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sure
      app.kubernetes.io/instance: sure
      app.kubernetes.io/component: worker
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": alloy
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": sure
            "k8s:app": sure-postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": sure
            "k8s:app.kubernetes.io/name": sure
            "k8s:app.kubernetes.io/instance": sure
            "k8s:app.kubernetes.io/component": redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": ai
            "k8s:app": ollama
      toPorts:
        - ports:
            - port: "11434"
              protocol: TCP
    - toEntities:
        - world
        - cluster
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: sure-postgres-policy
  namespace: sure
spec:
  endpointSelector:
    matchLabels:
      app: sure-postgres
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": sure
            "k8s:app.kubernetes.io/name": sure
            "k8s:app.kubernetes.io/instance": sure
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": alloy
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: sure-redis-policy
  namespace: sure
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sure
      app.kubernetes.io/instance: sure
      app.kubernetes.io/component: redis
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": sure
            "k8s:app.kubernetes.io/name": sure
            "k8s:app.kubernetes.io/instance": sure
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": alloy
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
